# Project-1-US-Weather-and-Energy-Analysis-Pipeline-Pioneer-Artificial-Intelligence-Academy

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
data/raw/: eia_energy_data.csv  noaa_weather_data.csv
src/: data_fetcher.py  pipeline.py
